lorm 1.0.9 2018-3-13

[FIX]   fix exception bug


lorm 1.0.7 2018-3-8

[IMPROVE]   support python 3


lorm 1.0.6 2018-3-7

[FIX]   fix QuerySet.clone


lorm 1.0.5 2018-3-5

[FIX]   fix startswith/contains/endswith


lorm 1.0.3 2018-3-2

[FIX]   improve Query.make_expr, safer than before.


lorm 1.0.2 2018-3-1

[FIX]   fix ondup


lorm 1.0.0 2018-2-9

[FIX]   fetchall(self, sql, args=None) =>
        fetchall(self, sql, *args)


lorm 0.3.24 2018-2-8

[NEW]   support subscript style to select a db/table
        db['default']['pet'].get(id=1)
[DEL]   QuerySet.wait, use translation instead
[FIX]   1. Solved the encoding problem that has been plagued for a long time, 
        unified encoding into Unicode later on.
        2. update examples


lorm 0.3.22 2017-11-27

[FIX]   add literal2 to fix '%' bug


lorm 0.3.17 2017-10-20

[FIX]   filter encoding error


lorm 0.3.17 2017-5-12

[NEW]   dynamically configured driver
        remove install requires
        add "ondup" filter


lorm 0.3.14 2017-5-5

[NEW]   add MaxBadConnRetries like golang/database/sql


lorm 0.3.12 2017-5-2

[NEW]   add ConnectionProxy.last_executed


lorm 0.3.10 2017-4-28

[FIX]   issue#1 add backquote to field name. Thanks zhanghaofei.
[FIX]   ignore unknown charset exception


lorm 0.3.9 2017-4-26

[NEW]   add "exclude" filter


lorm 0.3.5 2017-4-25

[NEW]   support transaction in autocommit mode.


lorm 0.3.4 2017-4-24

[NEW]   add transaction example


lorm 0.3.0 2017-4-19

[NEW]   rewrite connection-pool, now connection-pool is built-in.
        cancel auto-reconnect.
        cancel single connection mode, add Hub(), unified management connection pool.


lorm 0.2.23 2017-3-16

[NEW]   support "not in" filter
        db.pet.filter(id__ni=[1,2])


lorm 0.2.22 2017-1-4

[FIX]   fix slice bug


lorm 0.2.21 2017-1-3

[NEW]   compatible python3


lorm 0.2.20 2016-12-22

[DEL]   MysqlPool.__len__


lorm 0.2.19 2016-11-16

[NEW]   MysqlConnection.select_db
[NEW]   MysqlConnection.dup(**kwargs)

