@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '1.0.9'
+__version__ = '1.0.10'
 
 from .db import *
