@@ -1,5 +1,10 @@
 lorm 1.0.9 2018-3-13
 
+[NEW]   add Struct.copy method
+
+
+lorm 1.0.9 2018-3-13
+
 [FIX]   fix exception bug
 
 
